# opengl-demos

./: .gitignore  CMakeLists.txt  README.md  setup.sh  shell.nix
common/: shader.cpp  shader.hpp
demo00_first_window/: demo00_first_window
demo01_triangle/: demo01.cpp
demo02_triangle_transformations/: SimpleTransform.vert  demo02.cpp
demo03_triangle_transformations_ortho/: demo03.cpp
demo04_cube/: demo04.cpp
demo05_cube_triangle/: demo05.cpp
demo06_cube_random_colours/: demo06.cpp
demo07_cube_random_colours_cycling/: SimpleTransform.vert  demo07.cpp
demo08_cube_texture_bmp/: TextureShader.frag  demo08.cpp
demo09_cube_texture_dds/: TextureShaderInverted.frag  demo09.cpp
demo10_cube_keyboard_mouse/: demo10.cpp
demo11_cube_keyboard_mouse_capped_vangle/: demo11.cpp
demo12_cube_spinning/: demo12.cpp
demo13_cube_spinning_double/: demo13.cpp
demo14_cube_camera_rotation_fixed/: SimpleTransform.vert
lib/: CMakeLists.txt  libdemo.cpp  libdemo.hpp
playground/: main.cpp
